Fixed section height on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ body {
     }
 
     .portfolio-section {
-        height: 230vh;
+        height: 250vh;
     }
 
     .portfolio-section h2 {
